--- a/index.html
+++ b/index.html
@@ -23,44 +23,42 @@
             }
 
             // Inicializamos el cliente de Google
-            const client = google.accounts.oauth2.initCodeClient({
-                client_id: "136831675697-g752dn6minj6b3ippc5c574se1tceuti.apps.googleusercontent.com", // Tu Web Client ID
-                scope: 'email profile openid',
-                callback: (response) => {
-                    if (response.code) {
-                        // Tenemos el código, ahora se lo enviamos a nuestro mini-servidor
-                        document.getElementById('status').innerText = "Verificando con el servidor...";
-                        fetch('/.netlify/functions/link-playfab-account', {
-                            method: 'POST',
-                            headers: { 'Content-Type': 'application/json' },
-                            body: JSON.stringify({
-                                serverAuthCode: response.code,
-                                deviceId: deviceId
-                            })
-                        })
-                        .then(res => {
-                            if (!res.ok) {
-                                // Si la respuesta del servidor no es exitosa, leemos el error
-                                return res.json().then(err => { throw new Error(err.error || "Error desconocido del servidor") });
-                            }
-                            return res.json();
-                        })
-                        .then(data => {
-                            if (data.success) {
-                                document.getElementById('status').innerText = "¡Éxito! Tu cuenta ha sido vinculada. Ya puedes cerrar esta ventana y volver al juego.";
-                            } else {
-                                // Este 'else' es por si el servidor devuelve success:false pero con un status 200
-                                document.getElementById('status').innerText = "Error en el servidor: " + (data.error || "Respuesta inesperada.");
-                            }
-                        })
-                        .catch(err => {
-                            document.getElementById('status').innerText = "Error de conexión con el servidor: " + err.message;
-                        });
-                    } else {
-                        document.getElementById('status').innerText = "El inicio de sesión con Google ha fallado o ha sido cancelado. Puedes cerrar esta ventana.";
-                    }
+           const client = google.accounts.oauth2.initCodeClient({
+    client_id: "136831675697-g752dn6minj6b3ippc5c574se1tceuti.apps.googleusercontent.com", // Tu Web Client ID
+    scope: 'email profile openid',
+    redirect_uri: "https://tourmaline-malabi-ff9cb8.netlify.app", // 👈 debe coincidir EXACTAMENTE con el que pusiste en Google Cloud
+    callback: (response) => {
+        if (response.code) {
+            document.getElementById('status').innerText = "Verificando con el servidor...";
+            fetch('/.netlify/functions/link-playfab-account', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({
+                    serverAuthCode: response.code,
+                    deviceId: deviceId
+                })
+            })
+            .then(res => {
+                if (!res.ok) {
+                    return res.json().then(err => { throw new Error(err.error || "Error desconocido del servidor") });
                 }
+                return res.json();
+            })
+            .then(data => {
+                if (data.success) {
+                    document.getElementById('status').innerText = "¡Éxito! Tu cuenta ha sido vinculada. Ya puedes cerrar esta ventana y volver al juego.";
+                } else {
+                    document.getElementById('status').innerText = "Error en el servidor: " + (data.error || "Respuesta inesperada.");
+                }
+            })
+            .catch(err => {
+                document.getElementById('status').innerText = "Error de conexión con el servidor: " + err.message;
             });
+        } else {
+            document.getElementById('status').innerText = "El inicio de sesión con Google ha fallado o ha sido cancelado. Puedes cerrar esta ventana.";
+        }
+    }
+});
 
             // Pedimos el código
             document.getElementById('status').innerText = "Por favor, inicia sesión con Google para vincular tu cuenta...";
@@ -68,4 +66,5 @@
         };
     </script>
 </body>
+
 </html>
